NBNP-443 Fix breadcrumb+input description color contrast

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_accessibility.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_accessibility.scss
@@ -21,3 +21,8 @@
 code {
   color: $accessible-pink;
 }
+
+.breadcrumb-item.active,
+.description.text-muted {
+  color: $gray-700!important;
+}
